[package]
name = "rust-piano"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.13"
termion = "1.5"
rand = "0.7.3"
unicode-width = "0.1.8"
argh = "0.1.4"
walkdir = "2.3.1"
rodio = "0.13.0"
